# logitech-force-feedback

./: .gitignore  CMakeLists.txt
cmake/: gtest.cmake  libhid.cmake
include/lgff/: LogitechForceFeedback.h  LogitechForceFeedbackCommand.h  LogitechG29.h
src/: LogitechForceFeedback.cpp  LogitechG29.cpp
tests/: CMakeLists.txt
tests/src/: LogitechG29Test.cpp
